# backend/pkg/server/docs/swagger.yaml
@@ -1506,6 +1506,44 @@ definitions:
     - text
     - type
     type: object
+  models.Toolcall:
+    properties:
+      args:
+        type: string
+      call_id:
+        type: string
+      created_at:
+        type: string
+      duration_seconds:
+        minimum: 0
+        type: number
+      flow_id:
+        minimum: 0
+        type: integer
+      id:
+        minimum: 0
+        type: integer
+      name:
+        type: string
+      result:
+        type: string
+      status:
+        type: string
+      subtask_id:
+        minimum: 0
+        type: integer
+      task_id:
+        minimum: 0
+        type: integer
+      updated_at:
+        type: string
+    required:
+    - args
+    - call_id
+    - flow_id
+    - name
+    - status
+    type: object
   models.ToolcallsStats:
     properties:
       total_count:
@@ -1898,6 +1936,15 @@ definitions:
       tokens:
         items:
           $ref: '#/definitions/models.APIToken'
+        type: array
+      total:
+        type: integer
+    type: object
+  services.toolcalls:
+    properties:
+      toolcalls:
+        items:
+          $ref: '#/definitions/models.Toolcall'
         type: array
       total:
         type: integer
@@ -4581,6 +4628,144 @@ paths:
       summary: Retrieve termlogs list by flow id
       tags:
       - Termlogs
+  /flows/{flowID}/toolcalls/:
+    get:
+      parameters:
+      - description: flow id
+        in: path
+        minimum: 0
+        name: flowID
+        required: true
+        type: integer
+      - collectionFormat: multi
+        description: |-
+          Filtering result on server e.g. {"value":[...],"field":"...","operator":"..."}
+            field is the unique identifier of the table column, different for each endpoint
+            value should be integer or string or array type, "value":123 or "value":"string" or "value":[123,456]
+            operator value should be one of <,<=,>=,>,=,!=,like,not like,in
+            default operator value is 'like' or '=' if field is 'id' or '*_id' or '*_at'
+        in: query
+        items:
+          type: string
+        name: filters[]
+        type: array
+      - description: Field to group results by
+        in: query
+        name: group
+        type: string
+      - default: 1
+        description: Number of page (since 1)
+        in: query
+        minimum: 1
+        name: page
+        required: true
+        type: integer
+      - default: 5
+        description: Amount items per page (min -1, max 1000, -1 means unlimited)
+        in: query
+        maximum: 1000
+        minimum: -1
+        name: pageSize
+        type: integer
+      - collectionFormat: multi
+        description: |-
+          Sorting result on server e.g. {"prop":"...","order":"..."}
+            field order is "ascending" or "descending" value
+            order is required if prop is not empty
+        in: query
+        items:
+          type: string
+        name: sort[]
+        type: array
+      - default: init
+        description: Type of request
+        enum:
+        - sort
+        - filter
+        - init
+        - page
+        - size
+        in: query
+        name: type
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: toolcalls list received successful
+          schema:
+            allOf:
+            - $ref: '#/definitions/SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/services.toolcalls'
+              type: object
+        "400":
+          description: invalid query request data
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        "403":
+          description: getting toolcalls not permitted
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        "500":
+          description: internal error on getting toolcalls
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Retrieve toolcalls list by flow id
+      tags:
+      - Toolcalls
+  /flows/{flowID}/toolcalls/{toolcallID}:
+    get:
+      parameters:
+      - description: flow id
+        in: path
+        minimum: 0
+        name: flowID
+        required: true
+        type: integer
+      - description: toolcall id
+        in: path
+        minimum: 0
+        name: toolcallID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: toolcall info received successful
+          schema:
+            allOf:
+            - $ref: '#/definitions/SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.Toolcall'
+              type: object
+        "400":
+          description: invalid request data
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        "403":
+          description: getting toolcall not permitted
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        "404":
+          description: toolcall not found
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        "500":
+          description: internal error on getting toolcall
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Retrieve toolcall info by id and flow id
+      tags:
+      - Toolcalls
   /flows/{flowID}/usage:
     get:
       description: Get comprehensive analytics for a single flow including all breakdowns
@@ -6343,6 +6528,90 @@ paths:
       summary: Update API token
       tags:
       - Tokens
+  /toolcalls/:
+    get:
+      parameters:
+      - collectionFormat: multi
+        description: |-
+          Filtering result on server e.g. {"value":[...],"field":"...","operator":"..."}
+            field is the unique identifier of the table column, different for each endpoint
+            value should be integer or string or array type, "value":123 or "value":"string" or "value":[123,456]
+            operator value should be one of <,<=,>=,>,=,!=,like,not like,in
+            default operator value is 'like' or '=' if field is 'id' or '*_id' or '*_at'
+        in: query
+        items:
+          type: string
+        name: filters[]
+        type: array
+      - description: Field to group results by
+        in: query
+        name: group
+        type: string
+      - default: 1
+        description: Number of page (since 1)
+        in: query
+        minimum: 1
+        name: page
+        required: true
+        type: integer
+      - default: 5
+        description: Amount items per page (min -1, max 1000, -1 means unlimited)
+        in: query
+        maximum: 1000
+        minimum: -1
+        name: pageSize
+        type: integer
+      - collectionFormat: multi
+        description: |-
+          Sorting result on server e.g. {"prop":"...","order":"..."}
+            field order is "ascending" or "descending" value
+            order is required if prop is not empty
+        in: query
+        items:
+          type: string
+        name: sort[]
+        type: array
+      - default: init
+        description: Type of request
+        enum:
+        - sort
+        - filter
+        - init
+        - page
+        - size
+        in: query
+        name: type
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: toolcalls list received successful
+          schema:
+            allOf:
+            - $ref: '#/definitions/SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/services.toolcalls'
+              type: object
+        "400":
+          description: invalid query request data
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        "403":
+          description: getting toolcalls not permitted
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        "500":
+          description: internal error on getting toolcalls
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Retrieve toolcalls list
+      tags:
+      - Toolcalls
   /usage:
     get:
       description: Get comprehensive analytics for all user's flows including usage,
